[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_trainer"
version = "1.0"
requires-python = ">=3.13"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "cyy_huggingface_toolbox@git+https://github.com/cyyever/huggingface_toolbox.git",
  "cyy_torch_text@git+https://github.com/cyyever/torch_text.git",
  "cyy_torch_vision@git+https://github.com/cyyever/torch_vision.git",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pylint
  "PL",
  # numpy
  "NPY",
  # ruff
  "RUF",
]
ignore = ["F403","E402","PLR2004","E501"]
